--- a/App/src/app/profile/signup/signup.component.html
+++ b/App/src/app/profile/signup/signup.component.html
@@ -31,11 +31,11 @@
                                 </div>
                             </div>
                             <div class="form-floating mb-4">
-                                <input formControlName="username" type="text" class="form-control" id="username" placeholder="Username"
-                                [ngClass]="form.controls.username.errors?'is-invalid':''">
-                                <label for="username">Username</label>
+                                <input formControlName="name" type="text" class="form-control" id="name" placeholder="name"
+                                [ngClass]="form.controls.name.errors?'is-invalid':''">
+                                <label for="name">Username</label>
                                 <div class="invalid-feedback">
-                                    {{form.controls.username.errors | json}}
+                                    {{form.controls.name.errors | json}}
                                 </div>
                             </div>
                             <div>
