--- a/App/src/app/shared/navbar/navbar.component.html
+++ b/App/src/app/shared/navbar/navbar.component.html
@@ -13,7 +13,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Link</a>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown" *ngIf="!isLoggedIn()">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         Profile
@@ -21,6 +21,16 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" routerLink="/profile/sign-up">Sign Up</a></li>
                         <li><a class="dropdown-item" routerLink="/profile/login">Login</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown" *ngIf="isLoggedIn()">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        Profile
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" routerLink="/profile/sign-up">Sign Up</a></li>
+                        <li><a class="dropdown-item" (click)="logout()">Log Out</a></li>
                     </ul>
                 </li>
             </ul>
