--- a/App/src/app/shared/navbar/navbar.component.html
+++ b/App/src/app/shared/navbar/navbar.component.html
@@ -13,12 +13,15 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Link</a>
                 </li>
+                
+            </ul>
+            <ul class="navbar-nav mw-auto mb-2 mb-lg-0">
                 <li class="nav-item dropdown" *ngIf="!isLoggedIn()">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         Profile
                     </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" routerLink="/profile/sign-up">Sign Up</a></li>
                         <li><a class="dropdown-item" routerLink="/profile/login">Login</a></li>
                     </ul>
@@ -28,8 +31,8 @@
                         data-bs-toggle="dropdown" aria-expanded="false">
                         Profile
                     </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" routerLink="/profile/sign-up">Sign Up</a></li>
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" routerLink="/profile">Profile</a></li>
                         <li><a class="dropdown-item" (click)="logout()">Log Out</a></li>
                     </ul>
                 </li>
