--- a/App/src/app/campaign/list-public/list-public.component.html
+++ b/App/src/app/campaign/list-public/list-public.component.html
@@ -34,7 +34,7 @@
                         </div>
                     </div>
                     <div class="col-12 px-4 text-end">
-                        <a class="btn btn-outline-info btn-lg" routerLink="view/{{item.id}}">Details</a>
+                        <a class="btn btn-outline-info btn-lg" routerLink="/campaign/details/{{item.id}}">Details</a>
                     </div>
                 </div>
             </div>
