--- a/App/src/app/campaign/details/details.component.html
+++ b/App/src/app/campaign/details/details.component.html
@@ -1,3 +1,8 @@
 <div class="container">
+    <div class="row">
+        <div class="col-12 text-end">
+            <a class="btn btn-outline-warning" *ngIf="isOwner" routerLink="/edit/{{id}}">Edit</a>
+        </div>
+    </div>
     <h2>Campaign Details</h2>
 </div>
