--- a/App/src/app/campaign/edit/edit.component.html
+++ b/App/src/app/campaign/edit/edit.component.html
@@ -1,7 +1,7 @@
 <div class="container pt-4">
     <div class="row">
         <div class="col-6 offset-3">
-            <div class="card">
+            <div class="card" *ngIf="item">
                 <div class="card-body">
                     <h5 class="card-title">Edit Campaign</h5>
                     <div class="card-text mt-4">
