--- a/App/src/app/campaign/details/details.component.html
+++ b/App/src/app/campaign/details/details.component.html
@@ -1,8 +1,18 @@
 <div class="container">
     <div class="row">
         <div class="col-12 text-end">
-            <a class="btn btn-outline-warning" *ngIf="isOwner" routerLink="/edit/{{id}}">Edit</a>
+            <a class="btn btn-outline-warning me-2" *ngIf="isOwner" routerLink="/campaign/edit/{{id}}">Edit</a>
+            <button class="btn btn-outline-danger" *ngIf="isOwner">Delete</button>
         </div>
     </div>
     <h2>Campaign Details</h2>
+    <div class="row">
+        <div class="col-md-4">
+            <img src="" alt="" class="img-fluid">
+        </div>
+        <div class="col-md-8">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste, obcaecati illum veritatis consequatur consectetur odio odit est rem, eius aspernatur dignissimos sequi sed praesentium perspiciatis earum aperiam provident, quae nemo?<br>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ab suscipit delectus nobis debitis. Perferendis magni itaque laboriosam vero perspiciatis neque asperiores, natus provident soluta enim alias repellendus omnis quisquam?
+        </div>
+    </div>
 </div>
