--- a/App/src/app/campaign/details/details.component.html
+++ b/App/src/app/campaign/details/details.component.html
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-md-4">
                 <img [src]="getUrl()" alt="" class="img-fluid" *ngIf="imgVisible">
-                <input type="file" class="form-control" accept="image/*" (change)="changeUrl($event)">
+                <input type="file" class="form-control" accept="image/*" (change)="changeUrl($event)" *ngIf="isOwner">
             </div>
             <div class="col-md-8">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste, obcaecati illum veritatis consequatur consectetur odio odit est rem, eius aspernatur dignissimos sequi sed praesentium perspiciatis earum aperiam provident, quae nemo?<br>
