--- a/App/src/app/campaign/details/details.component.html
+++ b/App/src/app/campaign/details/details.component.html
@@ -11,8 +11,29 @@
                 <input type="file" class="form-control" accept="image/*" (change)="changeUrl($event)" *ngIf="isOwner">
             </div>
             <div class="col-md-8">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste, obcaecati illum veritatis consequatur consectetur odio odit est rem, eius aspernatur dignissimos sequi sed praesentium perspiciatis earum aperiam provident, quae nemo?<br>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ab suscipit delectus nobis debitis. Perferendis magni itaque laboriosam vero perspiciatis neque asperiores, natus provident soluta enim alias repellendus omnis quisquam?
+                <p class="text-muted mb-0"><small>Name</small></p>
+                <h3>{{item.name}}</h3>
+                <p class="text-muted mt-4 mb-0"><small>System</small></p>
+                <p>{{systemName}}</p>
+                <p class="text-muted mt-4 mb-0"><small>Description</small></p>
+                <p>{{item.description}}</p>
+            </div>
+            
+        </div>
+        <div class="row mt-3">
+            <div class="col-4 text-center">
+                Players: 0
+            </div>
+            <div class="col-4 text-center">
+                Locations: 0
+            </div>
+            <div class="col-4 text-center">
+                Items: 0
+            </div>
+        </div>
+        <div class="row mt-3" *ngIf="!isOwner">
+            <div class="col-12 text-center">
+                <button class="btn btn-outline-primary" (click)="join()">Join Now!</button>
             </div>
         </div>
     </div>
