--- a/App/src/app/campaign/details/details.component.html
+++ b/App/src/app/campaign/details/details.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row" *ngIf="item">
         <div class="col-12 text-end">
-            <a class="btn btn-outline-warning me-2" *ngIf="isOwner" routerLink="/campaign/edit/{{id}}">Edit</a>
+            <a class="btn btn-outline-warning ms-2" *ngIf="isOwner" routerLink="/campaign/edit/{{id}}">Edit</a>
             <button class="btn btn-outline-danger" *ngIf="isOwner">Delete</button>
         </div>
         <h2>Campaign Details</h2>
@@ -32,8 +32,12 @@
             </div>
         </div>
         <div class="row mt-3" *ngIf="!isOwner">
-            <div class="col-12 text-center">
+            <div class="col-12 text-center" *ngIf="!joined">
                 <button class="btn btn-outline-primary" (click)="join()">Join Now!</button>
+            </div>
+            <div class="col-12 text-center" *ngIf="joined">
+                <button class="btn btn-outline-success me-4">Enter the game</button>
+                <button class="btn btn-outline-danger ms-4">Leave</button>
             </div>
         </div>
     </div>
