--- a/App/src/app/campaign/details/details.component.html
+++ b/App/src/app/campaign/details/details.component.html
@@ -1,7 +1,8 @@
 <div class="container">
     <div class="row" *ngIf="item">
         <div class="col-12 text-end">
-            <a class="btn btn-outline-warning ms-2" *ngIf="isOwner" routerLink="/campaign/edit/{{id}}">Edit</a>
+            <a class="btn btn-outline-success me-2" *ngIf="isOwner" routerLink="/management/{{item.id}}">Management</a>
+            <a class="btn btn-outline-warning me-2" *ngIf="isOwner" routerLink="/campaign/edit/{{id}}">Edit</a>
             <button class="btn btn-outline-danger" *ngIf="isOwner">Delete</button>
         </div>
         <h2>Campaign Details</h2>
