--- a/App/src/app/shared/navbar/navbar.component.html
+++ b/App/src/app/shared/navbar/navbar.component.html
@@ -16,20 +16,16 @@
                 
             </ul>
             <ul class="navbar-nav mw-auto mb-2 mb-lg-0">
-                <li class="nav-item dropdown" *ngIf="!isLoggedIn()">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        Profile
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" routerLink="/profile/sign-up">Sign Up</a></li>
-                        <li><a class="dropdown-item" routerLink="/profile/login">Login</a></li>
-                    </ul>
+                <li class="nav-item" *ngIf="!isLoggedIn()">
+                    <a class="nav-link" routerLink="/profile/sign-up">Sign Up</a>
+                </li>
+                <li class="nav-item" *ngIf="!isLoggedIn()">
+                    <a class="nav-link" routerLink="/profile/login">Login</a>
                 </li>
                 <li class="nav-item dropdown" *ngIf="isLoggedIn()">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
-                        Profile
+                        Welcome, {{userName}}
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" routerLink="/profile">Profile</a></li>
