--- a/App/src/app/campaign/details/details.component.html
+++ b/App/src/app/campaign/details/details.component.html
@@ -4,6 +4,7 @@
             <a class="btn btn-outline-success me-2" *ngIf="isOwner" routerLink="/management/{{item.id}}">Management</a>
             <a class="btn btn-outline-warning me-2" *ngIf="isOwner" routerLink="/campaign/edit/{{id}}">Edit</a>
             <button class="btn btn-outline-danger" *ngIf="isOwner">Delete</button>
+            <button class="btn btn-outline-danger ms-4" *ngIf="joined">Leave</button>
         </div>
         <h2>Campaign Details</h2>
         <div class="row">
@@ -36,9 +37,10 @@
             <div class="col-12 text-center" *ngIf="!joined">
                 <button class="btn btn-outline-primary" (click)="join()">Join Now!</button>
             </div>
-            <div class="col-12 text-center" *ngIf="joined">
-                <button class="btn btn-outline-success me-4">Enter the game</button>
-                <button class="btn btn-outline-danger ms-4">Leave</button>
+        </div>
+        <div class="row mt-3" *ngIf="isOwner || joined">
+            <div class="col-4 offset-4">
+                <a class="btn btn-outline-success me-4 col-12" routerLink="/game/panel">Enter the game</a>
             </div>
         </div>
     </div>
