--- a/App/src/app/shared/navbar/navbar.component.html
+++ b/App/src/app/shared/navbar/navbar.component.html
@@ -11,7 +11,7 @@
                     <a class="nav-link" routerLink="/campaign">Campaigns</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" routerLink="/management">Management</a>
                 </li>
                 
             </ul>
