--- a/App/src/app/management/characters/add/add.component.html
+++ b/App/src/app/management/characters/add/add.component.html
@@ -18,6 +18,14 @@
             </div>
             <div class="modal-body">
                 <div class="row">
+                    <div class="form-floating mb-4">
+                        <select [(ngModel)]="race" class="form-select" id="race">
+                            <option *ngFor="let race of races" value="{{race}}">{{race}}</option>
+                        </select>
+                        <label for="race">Race</label>
+                    </div>
+                </div>
+                <div class="row">
                     <div class="col-12 text-end">
                         <button class="btn btn-outline-info" (click)="rollCharacter()">Roll All</button>
                     </div>
