--- a/App/src/app/management/characters/details/details.component.html
+++ b/App/src/app/management/characters/details/details.component.html
@@ -11,10 +11,12 @@
             </div>
             <div class="modal-body">
                 <div class="row">
-                    <p class="text-muted"><small>First Name</small></p>
+                    <p class="text-muted mb-0"><small>First Name</small></p>
                     <p>{{character?.firstName}}</p>
-                    <p class="text-muted"><small>Last Name</small></p>
+                    <p class="text-muted mb-0"><small>Last Name</small></p>
                     <p>{{character?.lastName}}</p>
+                    <p class="text-muted mb-0"><small>Race</small></p>
+                    <p>{{character?.race}}</p>
                 </div>
                 <h4>Characteristics</h4>
                 <div class="row">
