--- a/App/src/app/management/characters/add/add.component.html
+++ b/App/src/app/management/characters/add/add.component.html
@@ -16,7 +16,7 @@
             <form [formGroup]="form" (ngSubmit)="onSubmit()" (keydown.enter)="$event.preventDefault()">
                 <div class="modal-header">
                     <h5 class="modal-title" id="addModalLabel">Add Character</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" id="addClose" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <div class="row">
