--- a/App/src/app/management/characters/list/list.component.html
+++ b/App/src/app/management/characters/list/list.component.html
@@ -1,6 +1,6 @@
 <app-m-navbar [campaignId]="campaignId"></app-m-navbar>
 <div class="container mt-4">
-    <app-add [campaignId]="campaignId"></app-add>
+    <app-add [campaignId]="campaignId" (onAdd)="refresh()"></app-add>
     <div class="row mt-4 text-center">
         <h2>Characters List</h2>
     </div>
