--- a/App/src/app/management/characters/list/list.component.html
+++ b/App/src/app/management/characters/list/list.component.html
@@ -20,7 +20,7 @@
                             </button>
                         </p>
                         <p class="col-6 mb-0 text-end">
-                            <button class="btn btn-outline-danger">Delete</button>
+                            <button class="btn btn-outline-danger" (click)="delete(char.id)">Delete</button>
                         </p>
                     </div>
                 </div>
