Location details works

--- a/App/src/app/management/locations/list/list.component.html
+++ b/App/src/app/management/locations/list/list.component.html
@@ -27,5 +27,5 @@
             </div>
         </div>
     </div>
-    <!--app-details [character]="character"></!--app-details-->
+    <app-details [location]="location"></app-details>
 </div>
