--- a/App/src/app/shared/image-uploader/image-uploader.component.html
+++ b/App/src/app/shared/image-uploader/image-uploader.component.html
@@ -1,1 +1,1 @@
-<input type="file" class="form-control" accept="image/*" (change)="changeUrl($event)">
+<input #myInput type="file" class="form-control" accept="image/*" (change)="changeUrl($event)">
