--- a/App/src/app/management/characters/list/list.component.html
+++ b/App/src/app/management/characters/list/list.component.html
@@ -1,4 +1,4 @@
-<app-m-navbar [campaignId]="campaignId"></app-m-navbar>
+<app-m-navbar [campaignId]="campaignId" [page]="'characters'"></app-m-navbar>
 <div class="container mt-4">
     <app-add [campaignId]="campaignId" (onAdd)="refresh()"></app-add>
     <div class="row mt-4 text-center">
