--- a/App/src/app/shared/m-navbar/m-navbar.component.html
+++ b/App/src/app/shared/m-navbar/m-navbar.component.html
@@ -7,11 +7,31 @@
             </button>
             <div class="collapse navbar-collapse" id="managementNav">
                 <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" routerLink="/management/{{campaignId}}/characters">Characters</a></li>
-                    <li class="nav-item"><a class="nav-link" routerLink="/management/{{campaignId}}/locations">Locations</a></li>
-                    <li class="nav-item"><a class="nav-link" routerLink="/management/{{campaignId}}/items">Items</a></li>
-                    <li class="nav-item"><a class="nav-link" routerLink="/management/{{campaignId}}/notes">Notes</a></li>
-                    <li class="nav-item"><a class="nav-link" routerLink="/management/{{campaignId}}/players">Players</a></li>
+                    <li class="nav-item">
+                        <a [ngClass]="getActivity('characters')" class="nav-link" routerLink="/management/{{campaignId}}/characters">
+                            Characters
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a [ngClass]="getActivity('locations')" class="nav-link" routerLink="/management/{{campaignId}}/locations">
+                            Locations
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a [ngClass]="getActivity('items')" class="nav-link" routerLink="/management/{{campaignId}}/items">
+                            Items
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a [ngClass]="getActivity('notes')" class="nav-link" routerLink="/management/{{campaignId}}/notes">
+                            Notes
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a [ngClass]="getActivity('players')" class="nav-link" routerLink="/management/{{campaignId}}/players">
+                            Players
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
