Note details added

--- a/App/src/app/management/notes/list/list.component.html
+++ b/App/src/app/management/notes/list/list.component.html
@@ -27,5 +27,5 @@
             </div>
         </div>
     </div>
-    <!-- <app-details [location]="location"></app-details> -->
+    <app-details [note]="note"></app-details>
 </div>
