--- a/App/src/app/management/notes/details/details.component.html
+++ b/App/src/app/management/notes/details/details.component.html
@@ -15,7 +15,7 @@
                     <div class="col-md-8">
                         <p class="text-muted mb-0"><small>Title</small></p>
                         <p>{{note?.title}}</p>
-                        <p class="text-muted mb-0"><small>Description</small></p>
+                        <p class="text-muted mb-0"><small>Content</small></p>
                         <p>{{note?.description}}</p>
                     </div>
                 </div>
