--- a/App/src/app/management/players/list/list.component.html
+++ b/App/src/app/management/players/list/list.component.html
@@ -11,7 +11,12 @@
                         <div class="col-3">
                             {{ player.user.name }}
                         </div>
-                        <div class="col-6">
+                        <div class="col-3">
+                            <p *ngIf="player.character">
+                                {{player.character.firstName}} {{player.character.lastName}}
+                            </p>
+                        </div>
+                        <div class="col-3">
                             <select #s (change)="assignCharacter(player.id, s.value)" name="character" id="character" class="form-control">
                                 <option value="">-</option>
                                 <option [value]="'00000000-0000-0000-0000-000000000000'" *ngIf="player.character">None</option>
@@ -21,7 +26,7 @@
                             </select>
                         </div>
                         <div class="col-3 text-end">
-                            <button class="btn btn-outline-danger">Remove</button>
+                            <button class="btn btn-outline-danger" (click)="delete(player.id)">Remove</button>
                         </div>
                     </div>
                 </li>
