--- a/App/src/app/management/characters/details/details.component.html
+++ b/App/src/app/management/characters/details/details.component.html
@@ -11,12 +11,18 @@
             </div>
             <div class="modal-body">
                 <div class="row">
-                    <p class="text-muted mb-0"><small>First Name</small></p>
-                    <p>{{character?.firstName}}</p>
-                    <p class="text-muted mb-0"><small>Last Name</small></p>
-                    <p>{{character?.lastName}}</p>
-                    <p class="text-muted mb-0"><small>Race</small></p>
-                    <p>{{character?.race}}</p>
+                    <div class="col-md-4">
+                        <img [src]="getUrl()" alt="" class="img-fluid">
+                        <app-image-uploader [name]="'character'" [id]="character?.id" (onUpload)="onUpload($event)"></app-image-uploader>
+                    </div>
+                    <div class="col-md-8">
+                        <p class="text-muted mb-0"><small>First Name</small></p>
+                        <p>{{character?.firstName}}</p>
+                        <p class="text-muted mb-0"><small>Last Name</small></p>
+                        <p>{{character?.lastName}}</p>
+                        <p class="text-muted mb-0"><small>Race</small></p>
+                        <p>{{character?.race}}</p>
+                    </div>
                 </div>
                 <h4>Characteristics</h4>
                 <div class="row">
