--- a/App/src/app/management/locations/details/details.component.html
+++ b/App/src/app/management/locations/details/details.component.html
@@ -1,6 +1,6 @@
 <div class="modal fade" id="detailsModal" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
     <div class="modal-dialog">
-        <div class="modal-content">
+        <div class="modal-content" *ngIf="location">
             <div class="modal-header">
                 <h5 class="modal-title" id="detailsModalLabel">Location Details</h5>
                 <button type="button" id="detailsClose" class="btn-close" data-bs-dismiss="modal"
