--- a/App/src/app/management/characters/details/details.component.html
+++ b/App/src/app/management/characters/details/details.component.html
@@ -4,7 +4,7 @@
 <div class="modal fade" id="detailsModal" tabindex="-1" aria-labelledby="detailsModalLabel"
     aria-hidden="true">
     <div class="modal-dialog">
-        <div class="modal-content">
+        <div *ngIf="character" class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="detailsModalLabel">Details</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -12,7 +12,7 @@
             <div class="modal-body">
                 <div class="row">
                     <div class="col-md-4">
-                        <img [src]="getUrl()" alt="" class="img-fluid">
+                        <img [src]="character.url | urlPipe" alt="" class="img-fluid">
                         <app-image-uploader [name]="'character'" [id]="character?.id" (onUpload)="onUpload($event)"></app-image-uploader>
                     </div>
                     <div class="col-md-8">
