--- a/App/src/app/management/list/list.component.html
+++ b/App/src/app/management/list/list.component.html
@@ -11,7 +11,7 @@
             <div class="card p-3">
                 <div class="row">
                     <div class="col-1">
-                        <img src="{{api}}{{item.url}}" alt="{{item.name}} picture" class="img-fluid">
+                        <img [src]="item.url | urlPipe" alt="{{item.name}} picture" class="img-fluid">
                     </div>
                     <div class="col-9">
                         <div class="card-body">
